--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-In questa repo cercherò di tenere traccia dei documenti e delle risorse utili
+In questa repo cercherÃ² di tenere traccia dei documenti e delle risorse utili
 del gruppo in modo tale da salvaguardarle nel tempo.
 
 Se volete partecipare al mantenimento basta mandare una mail: 
